--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="upper">
-		<h1>This is The Place</h1>
+		<h1>This is just an example of a carosel using JS</h1>
 		<img src="images/livingroom.jpg">
 		
 	</div>
